fix deinit call and add comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ endif()
 
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_SOURCE_DIR}/include/ucosm)
 include_directories(${CMAKE_SOURCE_DIR}/ulink/include)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
