move getTick definition into periodic task

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ set(ULINK_UNIT_TESTS ulink_tests)
 
 include(CTest)
 
-file(GLOB TARGET_SRC "./tests.cpp" )
+file(GLOB TARGET_SRC "./*.cpp" )
 
 add_executable(${ULINK_UNIT_TESTS} ${TARGET_SRC})
 
