[cmake] fix typos

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,9 @@
-set(ULINK_UNIT_TESTS ulink_tests)
+set(UCOSM_UNIT_TESTS ucosm_tests)
 
 include(CTest)
 
 file(GLOB TARGET_SRC "./*.cpp" )
 
-add_executable(${ULINK_UNIT_TESTS} ${TARGET_SRC})
+add_executable(${UCOSM_UNIT_TESTS} ${TARGET_SRC})
 
-add_test(${ULINK_UNIT_TESTS} ${ULINK_UNIT_TESTS})
+add_test(${UCOSM_UNIT_TESTS} ${UCOSM_UNIT_TESTS})
