--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22)            # CMake version check
-project(ucosm VERSION 0.0.1 LANGUAGES CXX)      # Create project
+project(ucosm VERSION 0.0.1 LANGUAGES CXX ASM)  # Create project with assembly support
 set(CMAKE_CXX_STANDARD 17)                      # Enable c++17 standard
 
 
@@ -24,17 +24,17 @@ if(NOT EXISTS "${PROJECT_SOURCE_DIR}/ulink/CMakeLists.txt")
 endif()
 
 
-# Create header-only library target
-add_library(ucosm_impl INTERFACE)
-
-# Set include directories for the header-only library
-target_include_directories(ucosm_impl INTERFACE 
+# Create library with coroutine implementation using setjmp/longjmp
+add_library(ucosm_impl 
+    include/ucosm/coroutine/context.cpp
+)
+target_include_directories(ucosm_impl PUBLIC 
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/ulink/include
 )
+target_compile_features(ucosm_impl PUBLIC cxx_std_17)
 
-# Set C++17 standard for the library
-target_compile_features(ucosm_impl INTERFACE cxx_std_17)
+message(STATUS "Coroutines enabled with portable setjmp/longjmp implementation")
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
